Bug 276132 - Muon Package Manager crashed on startup
Summary: Muon Package Manager crashed on startup
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: muon (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
: 284549 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-06-20 16:53 UTC by Stefan Derkits
Modified: 2011-10-20 14:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.1.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Derkits 2011-06-20 16:53:01 UTC
Application: muon (1.1.80 "Caustic Carrionite")
KDE Platform Version: 4.6.4 (4.6.4)
Qt Version: 4.7.3
Operating System: Linux 3.0-1-generic i686
Distribution: Ubuntu oneiric (development branch)

-- Information about the crash:
Started Muon Package Manager for the first time and while loading the Packagelist it crashed. Did not crash again when starting again afterwards (tried ~ 5 times)

The crash does not seem to be reproducible.

-- Backtrace:
Application: Muon Package Manager (muon), signal: Segmentation fault
[Current thread is 1 (Thread 0xb789d710 (LWP 9403))]

Thread 2 (Thread 0xb2f6ab70 (LWP 9412)):
#0  0x00f2ed31 in clock_gettime (clock_id=1, tp=0xb2f6a028) at ../sysdeps/unix/clock_gettime.c:116
#1  0x00c1c9e5 in do_gettime () at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0x00cef376 in QTimerInfoList::updateCurrentTime (this=0x9d81cfc) at kernel/qeventdispatcher_unix.cpp:339
#4  0x00cef6ca in QTimerInfoList::timerWait (this=0x9d81cfc, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#5  0x00cedf13 in timerSourcePrepareHelper (src=<value optimized out>, timeout=0xb2f6a12c) at kernel/qeventdispatcher_glib.cpp:136
#6  0x00cedfad in timerSourcePrepare (source=0x9d81cc8, timeout=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#7  0x07f1d6ec in g_main_context_prepare () from /lib/i386-linux-gnu/libglib-2.0.so.0
#8  0x07f1e4a7 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#9  0x07f1ea9a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#10 0x00cee9f7 in QEventDispatcherGlib::processEvents (this=0x998a7e0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#11 0x00cbf74d in QEventLoop::processEvents (this=0xb2f6a2b0, flags=...) at kernel/qeventloop.cpp:149
#12 0x00cbf991 in QEventLoop::exec (this=0xb2f6a2b0, flags=...) at kernel/qeventloop.cpp:201
#13 0x00bc2bdb in QThread::exec (this=0x9b46358) at thread/qthread.cpp:492
#14 0x00ca035d in QInotifyFileSystemWatcherEngine::run (this=0x9b46358) at io/qfilesystemwatcher_inotify.cpp:248
#15 0x00bc5a83 in QThreadPrivate::start (arg=0x9b46358) at thread/qthread_unix.cpp:320
#16 0x05e99e99 in start_thread (arg=0xb2f6ab70) at pthread_create.c:304
#17 0x049976ee in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 1 (Thread 0xb789d710 (LWP 9403)):
[KCrash Handler]
#7  appendTo (this=0x0) at /build/buildd/qapt-1.1.80/src/backend.cpp:1301
#8  appendTo (this=0x0) at /usr/include/qt4/QtCore/qstringbuilder.h:292
#9  operator QString (this=0x0) at /usr/include/qt4/QtCore/qstringbuilder.h:108
#10 QApt::Backend::reloadCache (this=0x0) at /build/buildd/qapt-1.1.80/src/backend.cpp:238
#11 0x003e9753 in PackageWidget::reload (this=0x9994678) at /build/buildd/muon-1.1.80/libmuon/PackageModel/PackageWidget.cpp:254
#12 0x080541f0 in ManagerWidget::reload (this=0x9994678) at /build/buildd/muon-1.1.80/muon/ManagerWidget.cpp:61
#13 0x080513f0 in MainWindow::reload (this=0x9992f18) at /build/buildd/muon-1.1.80/muon/MainWindow.cpp:435
#14 0x080539c3 in MainWindow::workerEvent (this=0x9992f18, event=QApt::CacheUpdateFinished) at /build/buildd/muon-1.1.80/muon/MainWindow.cpp:319
#15 0x080537a1 in MainWindow::qt_metacall (this=0x9992f18, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xbfeb9d58) at /build/buildd/muon-1.1.80/obj-i686-linux-gnu/muon/MainWindow.moc:122
#16 0x00cc6acd in metacall (object=0x9992f18, cl=QMetaObject::InvokeMetaMethod, idx=87, argv=0xbfeb9d58) at kernel/qmetaobject.cpp:237
#17 QMetaObject::metacall (object=0x9992f18, cl=QMetaObject::InvokeMetaMethod, idx=87, argv=0xbfeb9d58) at kernel/qmetaobject.cpp:232
#18 0x00cd58fa in QMetaObject::activate (sender=0x990c218, m=0x31ccb8, local_signal_index=4, argv=0xbfeb9d58) at kernel/qobject.cpp:3278
#19 0x0030c695 in QApt::Backend::workerEvent (this=0x990c218, _t1=QApt::CacheUpdateFinished) at /build/buildd/qapt-1.1.80/obj-i686-linux-gnu/src/moc_backend.cxx:244
#20 0x002e94e9 in QApt::Backend::emitWorkerEvent (this=0x990c218, event=2) at /build/buildd/qapt-1.1.80/src/backend.cpp:1278
#21 0x0030c99e in QApt::Backend::qt_metacall (this=0x990c218, _c=QMetaObject::InvokeMetaMethod, _id=40, _a=0xbfeb9e98) at /build/buildd/qapt-1.1.80/obj-i686-linux-gnu/src/moc_backend.cxx:204
#22 0x00cc6acd in metacall (object=0x990c218, cl=QMetaObject::InvokeMetaMethod, idx=44, argv=0xbfeb9e98) at kernel/qmetaobject.cpp:237
#23 QMetaObject::metacall (object=0x990c218, cl=QMetaObject::InvokeMetaMethod, idx=44, argv=0xbfeb9e98) at kernel/qmetaobject.cpp:232
#24 0x00cd58fa in QMetaObject::activate (sender=0x99b1210, m=0x31ce38, local_signal_index=8, argv=0xbfeb9e98) at kernel/qobject.cpp:3278
#25 0x0030d6e5 in OrgKubuntuQaptworkerInterface::workerEvent (this=0x99b1210, _t1=2) at /build/buildd/qapt-1.1.80/obj-i686-linux-gnu/src/workerdbus.moc:225
#26 0x0030dc10 in OrgKubuntuQaptworkerInterface::qt_metacall (this=0x99b1210, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbfeba0cc) at /build/buildd/qapt-1.1.80/obj-i686-linux-gnu/src/workerdbus.moc:130
#27 0x0033c787 in QDBusConnectionPrivate::deliverCall (this=0x9c75358, object=0x99b1210, msg=..., metaTypes=..., slotIdx=0) at qdbusintegrator.cpp:942
#28 0x003468c6 in QDBusCallDeliveryEvent::placeMetaCall (this=0x9ca5448, object=0x99b1210) at qdbusintegrator_p.h:103
#29 0x00cd89e2 in QObject::event (this=0x99b1210, e=0x9ca5448) at kernel/qobject.cpp:1217
#30 0x0108d2b4 in notify_helper (this=0x98bdae0, receiver=0x99b1210, e=0x9ca5448) at kernel/qapplication.cpp:4467
#31 QApplicationPrivate::notify_helper (this=0x98bdae0, receiver=0x99b1210, e=0x9ca5448) at kernel/qapplication.cpp:4439
#32 0x01092663 in QApplication::notify (this=0x9ca5448, receiver=0x99b1210, e=0x9ca5448) at kernel/qapplication.cpp:3867
#33 0x005e536a in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#34 0x00cc070e in QCoreApplication::notifyInternal (this=0xbfebbb00, receiver=0x99b1210, event=0x9ca5448) at kernel/qcoreapplication.cpp:731
#35 0x00cc3ee3 in sendEvent (receiver=0x0, event_type=0, data=0x989bf68) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#36 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x989bf68) at kernel/qcoreapplication.cpp:1372
#37 0x00cc403c in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1265
#38 0x00cee564 in sendPostedEvents (s=0x98c5318) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#39 postEventSourceDispatch (s=0x98c5318) at kernel/qeventdispatcher_glib.cpp:277
#40 0x07f1e0cf in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#41 0x07f1e800 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#42 0x07f1ea9a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#43 0x00cee99a in QEventDispatcherGlib::processEvents (this=0x989bac0, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#44 0x011423ea in QGuiEventDispatcherGlib::processEvents (this=0x989bac0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#45 0x00cc42d3 in QCoreApplication::processEvents (flags=...) at kernel/qcoreapplication.cpp:923
#46 0x002f5053 in QApt::CacheBuildProgress::Update (this=0x9c49924) at /build/buildd/qapt-1.1.80/src/cache.cpp:36
#47 0x00e283d6 in OpProgress::Progress(unsigned long) () from /usr/lib/libapt-pkg.so.4.10
#48 0x00e3f470 in pkgDepCache::Update(OpProgress*) () from /usr/lib/libapt-pkg.so.4.10
#49 0x00e44257 in pkgDepCache::Init(OpProgress*) () from /usr/lib/libapt-pkg.so.4.10
#50 0x00e6e2a9 in pkgCacheFile::BuildDepCache(OpProgress*) () from /usr/lib/libapt-pkg.so.4.10
#51 0x00e6e344 in pkgCacheFile::Open(OpProgress*, bool) () from /usr/lib/libapt-pkg.so.4.10
#52 0x002f4dcd in QApt::Cache::open (this=0x99e2270) at /build/buildd/qapt-1.1.80/src/cache.cpp:85
#53 0x002efd8a in QApt::Backend::reloadCache (this=0x990c218) at /build/buildd/qapt-1.1.80/src/backend.cpp:166
#54 0x002f120b in QApt::Backend::init (this=0x990c218) at /build/buildd/qapt-1.1.80/src/backend.cpp:156
#55 0x003cf6aa in MuonMainWindow::initObject (this=0x9992f18) at /build/buildd/muon-1.1.80/libmuon/MuonMainWindow.cpp:73
#56 0x08052790 in MainWindow::initObject (this=0x9992f18) at /build/buildd/muon-1.1.80/muon/MainWindow.cpp:123
#57 0x080536c6 in MainWindow::qt_metacall (this=0x9992f18, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xbfebb3f4) at /build/buildd/muon-1.1.80/obj-i686-linux-gnu/muon/MainWindow.moc:112
#58 0x00cc6acd in metacall (object=0x9992f18, cl=QMetaObject::InvokeMetaMethod, idx=77, argv=0xbfebb3f4) at kernel/qmetaobject.cpp:237
#59 QMetaObject::metacall (object=0x9992f18, cl=QMetaObject::InvokeMetaMethod, idx=77, argv=0xbfebb3f4) at kernel/qmetaobject.cpp:232
#60 0x00cd58fa in QMetaObject::activate (sender=0x9c73fe0, m=0xdf5258, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3278
#61 0x00cdd1e5 in QSingleShotTimer::timeout (this=0x9c73fe0) at .moc/release-shared/qtimer.moc:82
#62 0x00cdd29c in QSingleShotTimer::timerEvent (this=0x9c73fe0) at kernel/qtimer.cpp:308
#63 0x00cd8824 in QObject::event (this=0x9c73fe0, e=0xbfebb7ec) at kernel/qobject.cpp:1181
#64 0x0108d2b4 in notify_helper (this=0x98bdae0, receiver=0x9c73fe0, e=0xbfebb7ec) at kernel/qapplication.cpp:4467
#65 QApplicationPrivate::notify_helper (this=0x98bdae0, receiver=0x9c73fe0, e=0xbfebb7ec) at kernel/qapplication.cpp:4439
#66 0x01092663 in QApplication::notify (this=0xbfebb7ec, receiver=0x9c73fe0, e=0xbfebb7ec) at kernel/qapplication.cpp:3867
#67 0x005e536a in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#68 0x00cc070e in QCoreApplication::notifyInternal (this=0xbfebbb00, receiver=0x9c73fe0, event=0xbfebb7ec) at kernel/qcoreapplication.cpp:731
#69 0x00cf0b10 in sendEvent (this=0x98c0054) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#70 QTimerInfoList::activateTimers (this=0x98c0054) at kernel/qeventdispatcher_unix.cpp:604
#71 0x00cedfe2 in timerSourceDispatch (source=0x98c0020) at kernel/qeventdispatcher_glib.cpp:184
#72 0x07f1e0cf in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#73 0x07f1e800 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#74 0x07f1ea9a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#75 0x00cee99a in QEventDispatcherGlib::processEvents (this=0x989bac0, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#76 0x011423ea in QGuiEventDispatcherGlib::processEvents (this=0x989bac0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#77 0x00cbf74d in QEventLoop::processEvents (this=0xbfebba64, flags=...) at kernel/qeventloop.cpp:149
#78 0x00cbf991 in QEventLoop::exec (this=0xbfebba64, flags=...) at kernel/qeventloop.cpp:201
#79 0x00cc40ed in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#80 0x0108ae54 in QApplication::exec () at kernel/qapplication.cpp:3741
#81 0x080507d3 in main (argc=) at /build/buildd/muon-1.1.80/muon/main.cpp:55

Reported using DrKonqi
Comment 1 Jonathan Thomas 2011-06-22 04:21:39 UTC
Git commit 75f101153731e3f9cde70a53a3455867209a148c by Jonathan Thomas.
Committed on 22/06/2011 at 04:15.
Pushed by jmthomas into branch '1.1'.

Fix a crash that occurs when the QApt Worker sends a CacheUpdateFinished signal while
Muon is still starting up.

BUG:276132
FIXED-IN:1.1.4, 1.1.85

Conflicts:

	muon/MainWindow.cpp
	updater/UpdaterWindow.cpp

M  +5    -1    muon/MainWindow.cpp     
M  +5    -1    updater/UpdaterWindow.cpp     

http://commits.kde.org/muon/75f101153731e3f9cde70a53a3455867209a148c
Comment 2 Jonathan Thomas 2011-06-22 04:21:39 UTC
Git commit 85a97d186f48167ca938f7d569b85895fd971d5d by Jonathan Thomas.
Committed on 22/06/2011 at 04:15.
Pushed by jmthomas into branch 'master'.

Fix a crash that occurs when the QApt Worker sends a CacheUpdateFinished signal while
Muon is still starting up.

BUG:276132
FIXED-IN:1.1.4, 1.1.85

M  +4    -2    muon/MainWindow.cpp     
M  +4    -2    updater/UpdaterWindow.cpp     

http://commits.kde.org/muon/85a97d186f48167ca938f7d569b85895fd971d5d
Comment 3 Jekyll Wu 2011-10-20 14:02:00 UTC
*** Bug 284549 has been marked as a duplicate of this bug. ***