Fix a crash that occurs when the QApt Worker sends a CacheUpdateFinished signal while Muon is still starting up.

BUG:276132
FIXED-IN:1.1.4, 1.1.85

Conflicts:

	muon/MainWindow.cpp
	updater/UpdaterWindow.cpp