muon/MainWindow.cpp
@@ -286,7 +286,11 @@ void MainWindow::workerEvent(QApt::WorkerEvent event)
         break;
     case QApt::CacheUpdateFinished:
     case QApt::CommitChangesFinished:
-        reload();
+        if (m_backend) {
+            reload();
+            setActionsEnabled();
+        }
+    case QApt::PackageDownloadFinished:
         returnFromPreview();
         if (m_warningStack.size() > 0) {
             showQueuedWarnings();
