updater/UpdaterWindow.cpp
@@ -131,7 +131,11 @@ void UpdaterWindow::workerEvent(QApt::WorkerEvent event)
         break;
     case QApt::CacheUpdateFinished:
     case QApt::CommitChangesFinished:
-        reload();
+        if (m_backend) {
+            reload();
+            setActionsEnabled();
+        }
+    case QApt::PackageDownloadFinished:
         returnFromPreview();
         if (m_warningStack.size() > 0) {
             showQueuedWarnings();
